--- a/templates/apple_stock/price_matrix.html
+++ b/templates/apple_stock/price_matrix.html
@@ -343,6 +343,10 @@
             padding: 0 !important;
         }
 
+        .dc {
+            border:0 !important;
+        }
+
         /* thead 高さ0指定 */
         table thead.thead-zero,
         table thead.thead-zero tr,
@@ -549,7 +553,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>194,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="20 21 22"
                     data-highest>
                     -
@@ -557,12 +561,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="20 21 22"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="20 21 22"
                     data-average>
                     -
@@ -682,7 +686,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">512GB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>229,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="23 24 25"
                     data-highest>
                     -
@@ -690,12 +694,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="23 24 25"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="23 24 25"
                     data-average>
                     -
@@ -813,7 +817,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">1TB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>264,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="26 27 28"
                     data-highest>
                     -
@@ -821,12 +825,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="26 27 28"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="26 27 28"
                     data-average>
                     -
@@ -943,7 +947,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">2TB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>329,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="29 30 31"
                     data-highest>
                     -
@@ -951,12 +955,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="29 30 31"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="29 30 31"
                     data-average>
                     -
@@ -1117,7 +1121,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>179,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="11 12 13"
                     data-highest>
                     -
@@ -1125,12 +1129,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="11 12 13"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="11 12 13"
                     data-average>
                     -
@@ -1247,7 +1251,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">512GB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>214,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="14 15 16"
                     data-highest>
                     -
@@ -1255,12 +1259,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="14 15 16"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="14 15 16"
                     data-average>
                     -
@@ -1377,7 +1381,7 @@
                 <td class="front-num" rowspan="5" style="text-align:left;">1TB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>249,800</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="17 18 19"
                     data-highest>
                     -
@@ -1385,12 +1389,12 @@
                 <td class="front-num" rowspan="5" data-diff>-</td>
                 <td class="front-num" rowspan="5" data-rate>-</td>
                 <td class="front-num" rowspan="5"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="17 18 19"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="5" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="17 18 19"
                     data-average>
                     -
@@ -1552,7 +1556,7 @@
                 <td class="front-num" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>159,800</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="32 33 34 35"
                     data-highest>
                     -
@@ -1560,12 +1564,12 @@
                 <td class="front-num" rowspan="1" data-diff>-</td>
                 <td class="front-num" rowspan="1" data-rate>-</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="32 33 34 35"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="1" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="32 33 34 35"
                     data-average>
                     -
@@ -1601,7 +1605,7 @@
                 <td class="front-num" style="text-align:left;">512GB</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>194,800</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="36 37 38 39"
                     data-highest>
                     -
@@ -1609,12 +1613,12 @@
                 <td class="front-num" rowspan="1" data-diff>-</td>
                 <td class="front-num" rowspan="1" data-rate>-</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="36 37 38 39"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="1" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="36 37 38 39"
                     data-average>
                     -
@@ -1650,7 +1654,7 @@
                 <td class="front-num" style="text-align:left;">1T</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>229,800</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="40 41 42 43"
                     data-highest>
                     -
@@ -1658,12 +1662,12 @@
                 <td class="front-num" rowspan="1" data-diff>-</td>
                 <td class="front-num" rowspan="1" data-rate>-</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="40 41 42 43"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="1" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="40 41 42 43"
                     data-average>
                     -
@@ -1699,7 +1703,6 @@
             </tbody>
         </table>
     </div>
-
 
     <!-- ================= iPhone 17 ================= -->
     <div class="model-section">
@@ -1746,7 +1749,7 @@
                 <td class="front-num" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>129,800</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="1 2 3 4 5"
                     data-highest>
                     -
@@ -1754,12 +1757,12 @@
                 <td class="front-num" rowspan="1" data-diff>-</td>
                 <td class="front-num" rowspan="1" data-rate>-</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="1 2 3 4 5"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="1" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="1 2 3 4 5"
                     data-average>
                     -
@@ -1796,7 +1799,7 @@
                 <td class="front-num" style="text-align:left;">512GB</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>164,800</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="6 7 8 9 10"
                     data-highest>
                     -
@@ -1804,12 +1807,12 @@
                 <td class="front-num" rowspan="1" data-diff>-</td>
                 <td class="front-num" rowspan="1" data-rate>-</td>
                 <td class="front-num" rowspan="1"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="6 7 8 9 10"
                     data-change-from-crevious-day>-
                 </td>
                 <td rowspan="1" class="is-hidden front-num"
-                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 2 5 11 5 15 20"
+                    data-range-shop-id="14 1 8 13 7 9 10 19 18 16 12 17 3 4 5 11 15 20"
                     data-range-iphen-id="6 7 8 9 10"
                     data-average>
                     -
@@ -1840,12 +1843,40 @@
                 <td class="nodata all-price" data-shop-id="15" data-iphen-average-id="6 7 8 9 10">※要問</td>
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="6 7 8 9 10">※要問</td>
             </tr>
+
+           <tr>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc"></td>
+               <td class="dc" colspan="5">※データの正確性、および完全性は保証致しません。</td>
+
+            </tr>
+
             </tbody>
         </table>
     </div>
 
     <div class="model-gap"></div>
-    <h5 style="padding: 10px;text-align: right;">※データの正確性、および完全性は保証致しません。</h5>
+
+
 
 
 </div>
