--- a/templates/apple_stock/price_matrix.html
+++ b/templates/apple_stock/price_matrix.html
@@ -2362,7 +2362,7 @@
                 }
 
                 // 使用 epsilon 来处理浮点微差或类型问题
-                const EPS = 1e-6;
+                const EPS = 1;
 
                 // 打标（并列也都会被标）
                 for (const it of items) {
