--- a/templates/apple_stock/price_matrix.html
+++ b/templates/apple_stock/price_matrix.html
@@ -16,7 +16,7 @@
         }
 
         :root {
-            --bg: #f6f7fb;
+            --bg: #ffffff;
             --card: #ffffff;
             --grid-border: #d9deea;
             --header-bg: #ff9900;
