--- a/templates/apple_stock/price_matrix.html
+++ b/templates/apple_stock/price_matrix.html
@@ -569,7 +569,7 @@
             <tbody>
             <!-- 256GB -->
             <tr>
-                <td class="front-name" rowspan="25" style="text-align:left;">17 Pro Max</td>
+                <td class="front-name" rowspan="25" style="text-align: center;">17 Pro Max</td>
                 <td class="front-num" rowspan="5" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>194,800</td>
                 <td class="front-num" rowspan="5"
@@ -1137,7 +1137,7 @@
             <tbody>
             <!-- 256GB -->
             <tr>
-                <td class="front-name" rowspan="17" style="text-align:left;">17 Pro</td>
+                <td class="front-name" rowspan="17" style="text-align: center;">17 Pro</td>
                 <td class="front-num" rowspan="5" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="5" data-issue-pricing>179,800</td>
                 <td class="front-num" rowspan="5"
@@ -1572,7 +1572,7 @@
             <tbody>
             <tr>
 
-                <td class="front-name" rowspan="3" style="text-align:left;">Air</td>
+                <td class="front-name" rowspan="3" style="text-align: center;">Air</td>
                 <td class="front-num" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>159,800</td>
                 <td class="front-num" rowspan="1"
@@ -1765,7 +1765,7 @@
             </thead>
             <tbody>
             <tr>
-                <td class="front-name" rowspan="2" style="text-align:left;">17</td>
+                <td class="front-name" rowspan="2" style="text-align: center;">17</td>
                 <td class="front-num" style="text-align:left;">256GB</td>
                 <td class="front-num" rowspan="1" data-issue-pricing>129,800</td>
                 <td class="front-num" rowspan="1"
